<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Box 1 -->
        <FrameLayout
            android:id="@+id/frameBox1"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/card_blue_border"
            android:padding="1dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:gravity="center_vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin = "8dp"
                        android:src="@drawable/upload_pdf" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uploadPDF"
                            android:textSize="16sp"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/generateFromPDF"
                            android:textSize="14sp"
                            android:textColor="#888888"/> <!-- Adjust color as required -->

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>


        <!-- Box 2 -->
        <FrameLayout
            android:id="@+id/frameBox2"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/card_blue_border"
            android:padding="1dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:gravity="center_vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin = "8dp"
                        android:src="@drawable/upload_img" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uploadImg"
                            android:textSize="16sp"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/generateFromImg"
                            android:textSize="14sp"
                            android:textColor="#888888"/> <!-- Adjust color as required -->

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameBox3"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/card_blue_border"
            android:padding="1dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:gravity="center_vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin = "8dp"
                        android:src="@drawable/text_field" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uploadInput"
                            android:textSize="16sp"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/generateFromInput"
                            android:textSize="14sp"
                            android:textColor="#888888"/> <!-- Adjust color as required -->

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>